pluralsight-webinars/2020-12-docker-for-new-and-old-apps/kubernetes/apod/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apod
  labels:
    pswebinar: "20.12"
