pluralsight-webinars/2020-12-docker-for-new-and-old-apps/kubernetes/apod/apod-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  name: apod-api
  namespace: apod
  annotations:
    nginx.ingress.kubernetes.io/limit-rpm: "2"
spec:
  rules:
  - host: api.apod.sixeyed.com
    http:
      paths:
      - pathType: Exact
        path: /image
        backend:
          serviceName: apod-api
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  name: apod-web
  namespace: apod
  annotations:
    nginx.ingress.kubernetes.io/limit-rpm: "10"
spec:
  rules:
  - host: apod.sixeyed.com
    http:
      paths:
      - pathType: Exact
        path: /
        backend:
          serviceName: apod-web
          servicePort: 80
